Bug 217107 - Fix EXT_color_buffer_half_float on iOS
Summary: Fix EXT_color_buffer_half_float on iOS
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: James Darpinian
URL:
Keywords: InRadar
: 216998 (view as bug list)
Depends on: 216010
Blocks: 126404
  Show dependency treegraph
 
Reported: 2020-09-29 15:24 PDT by James Darpinian
Modified: 2021-02-05 16:10 PST (History)
7 users (show)

See Also:


Attachments
Patch (3.02 KB, patch)
2020-09-29 15:25 PDT, James Darpinian
no flags Details | Formatted Diff | Diff
Patch (3.02 KB, patch)
2020-09-29 15:52 PDT, James Darpinian
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description James Darpinian 2020-09-29 15:24:41 PDT
Fix EXT_color_buffer_half_float on iOS
Comment 1 James Darpinian 2020-09-29 15:25:14 PDT
Created attachment 410058 [details]
Patch
Comment 2 EWS Watchlist 2020-09-29 15:26:10 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Comment 3 James Darpinian 2020-09-29 15:26:58 PDT
*** Bug 216998 has been marked as a duplicate of this bug. ***
Comment 4 Kenneth Russell 2020-09-29 15:48:20 PDT
Comment on attachment 410058 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=410058&action=review

Looks good; one small question. r+

> Source/ThirdParty/ANGLE/src/libANGLE/renderer/gl/renderergl_utils.cpp:296
> +            functions->hasExtension("GL_EXT_color_buffer_half_float"))

Should this be "hasGLESExtension" (here and upstream)?
Comment 5 James Darpinian 2020-09-29 15:52:16 PDT
Created attachment 410061 [details]
Patch
Comment 6 James Darpinian 2020-09-29 15:53:25 PDT
Comment on attachment 410058 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=410058&action=review

>> Source/ThirdParty/ANGLE/src/libANGLE/renderer/gl/renderergl_utils.cpp:296
>> +            functions->hasExtension("GL_EXT_color_buffer_half_float"))
> 
> Should this be "hasGLESExtension" (here and upstream)?

Sure, it doesn't make a difference here because the GLES check is redundant to the one in isAtLeastGLES, but it makes sense to be consistent.
Comment 7 EWS 2020-09-29 16:32:02 PDT
Committed r267770: <https://trac.webkit.org/changeset/267770>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 410061 [details].
Comment 8 Radar WebKit Bug Importer 2020-09-29 16:33:15 PDT
<rdar://problem/69768975>
Comment 9 Thomas Kranz 2021-02-01 03:19:21 PST
As of iOS/iPadOS 14.4, this does not seem to be fixed for WebGL2 contexts. It DOES work with Safari on macOS. The extension is reported for WebGL on both platforms.
Comment 10 Kenneth Russell 2021-02-03 21:23:51 PST
The ANGLE backend for WebGL 2.0 hasn't shipped in Safari on iOS yet, I'm afraid.

As soon as WebGL 2.0 is enabled by default on iOS - no longer experimentally - this will work.
Comment 11 Thomas Kranz 2021-02-05 01:15:33 PST
Oops, please forgive my unattentive reading of the ticket. :(

I suppose we don't have a timeframe for the switch on iOS, do we?
Comment 12 Kenneth Russell 2021-02-05 16:10:37 PST
I'm afraid we don't.