Fix EXT_color_buffer_half_float on iOS https://bugs.webkit.org/show_bug.cgi?id=217107

Reviewed by Kenneth Russell.

* src/libANGLE/Context.cpp:
(gl::Context::generateSupportedExtensions const):
* src/libANGLE/renderer/gl/renderergl_utils.cpp:
(rx::nativegl_gl::GenerateTextureFormatCaps):


Canonical link: https://commits.webkit.org/229891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267770 268f45cc-cd09-0410-ab3c-d52691b4dbfc