Source/ThirdParty/ANGLE/src/libANGLE/Context.cpp
@@ -3192,7 +3192,7 @@ Extensions Context::generateSupportedExtensions() const
         // We require colorBufferFloat to be present in order to enable colorBufferHalfFloat, so
         // that blitting is always allowed if the requested formats are exposed and have the correct
         // feature capabilities
-        if (!supportedExtensions.colorBufferFloat)
+        if (!supportedExtensions.colorBufferFloat && !mWebGLContext)
         {
             supportedExtensions.colorBufferHalfFloat = false;
         }
